<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_quarter">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_2x"
        android:paddingEnd="@dimen/spacing_1x"
        android:paddingStart="@dimen/spacing_1x"
        android:paddingTop="@dimen/spacing_2x">

        <Switch
          android:id="@+id/lockscreenUse"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/label_lockscreen"
          android:textOff="@string/label_not_use"
          android:textOn="@string/label_use"/>

        <Switch
          android:id="@+id/clockUse"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/label_clock"
          android:textOff="@string/label_not_use"
          android:textOn="@string/label_use"/>
      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_quarter">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_2x"
        android:paddingEnd="@dimen/spacing_1x"
        android:paddingStart="@dimen/spacing_1x"
        android:paddingTop="@dimen/spacing_2x">

        <Switch
          android:id="@+id/unconsciousUse"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/label_unconscious"
          android:textOff="@string/label_not_use"
          android:textOn="@string/label_use"/>

        <LinearLayout
          android:id="@+id/intervalText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/spacing_1x"
          android:orientation="horizontal">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_interval"
            android:textColor="@color/textColorPrimary"/>

          <TextView
            android:id="@+id/intervalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4x"
            android:textColor="@color/textColorPrimary"/>

          <SeekBar
            android:id="@+id/interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_1x"
            android:max="30"
            android:progress="6"/>

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/spacing_1x"
          android:gravity="center_vertical"
          android:orientation="horizontal">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_unconscious_bg"
            android:textColor="@color/textColorPrimary"/>

          <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">

            <RadioButton
              android:id="@+id/themeBlue"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/spacing_1x"
              android:background="@drawable/unconscious_blue"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

            <RadioButton
              android:id="@+id/themeGreen"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/spacing_1x"
              android:background="@drawable/unconscious_green"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

            <RadioButton
              android:id="@+id/themeGrey"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/spacing_1x"
              android:background="@drawable/unconscious_grey"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

            <RadioButton
              android:id="@+id/themePink"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/spacing_1x"
              android:background="@drawable/unconscious_pink"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

            <RadioButton
              android:id="@+id/themePurple"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/spacing_1x"
              android:background="@drawable/unconscious_purple"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

          </RadioGroup>
        </LinearLayout>

      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_quarter">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_2x"
        android:paddingEnd="@dimen/spacing_1x"
        android:paddingStart="@dimen/spacing_1x"
        android:paddingTop="@dimen/spacing_2x">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_lock_collection"
          android:textColor="@color/textColorPrimary"/>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/spacing_1x"
          android:gravity="end"
          android:orientation="horizontal">

          <RadioButton
            android:id="@+id/optionAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_collection_all"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

          <RadioButton
            android:id="@+id/optionMastered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:text="@string/label_collection_mastered"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="end"
          android:orientation="horizontal">

          <RadioButton
            android:id="@+id/optionLearning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_collection_learning"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

          <RadioButton
            android:id="@+id/optionChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:text="@string/label_collection_checked"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/switchLayer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/spacing_1x"
          android:orientation="vertical"/>

      </LinearLayout>
    </androidx.cardview.widget.CardView>

  </LinearLayout>

</androidx.core.widget.NestedScrollView>